moved offices update to only servide layer